<resources>
    <string name="app_name">FoodTrackerV2</string>
    <string name="menu_recorder">Home</string>
    <string name="menu_food_profile">Food Profile</string>
    <string name="menu_my_alerts">My Alerts</string>
    <string name="menu_my_preferences">My Preferences</string>
    <string name="menu_my_reports">My Reports</string>
    <string name="recorder_title">ADD NEW FOOD ITEM</string>
    <string name="main_activity_instructions">Click List Item to Record</string>
    <string name="activity_food_lookup">Click Similar Item from CalorieCount</string>
    <string name="activity_food_list">Click List Item to Update Profile</string>
    <string name="activity_food_List_title_add">ADD NEW FOOD ITEM</string>
    <string name="activity_food_List_title_update">UPDATE FOOD ITEM</string>
    <string name="activity_food_List_detail_item_lookup">Click here for calorie information on similar items from caloriecount.com</string>
    <string name="activity_food_List_detail_item_name">Item Name</string>
    <string name="activity_food_List_detail_fruit">FRUIT CALORIES</string>
    <string name="activity_food_List_detail_grain">GRAIN CALORIES</string>
    <string name="activity_food_List_detail_vegetable">VEGETABLE CALORIES</string>
    <string name="activity_food_List_detail_protein">PROTEIN CALORIES</string>
    <string name="activity_food_List_detail_dairy">DAIRY CALORIES</string>
    <string name="activity_food_List_detail_update">UPDATE</string>
    <string name="activity_recorder_new_item">Enter New Foor Item</string>
    <string name="activity_recorder_new_item_hint">enter food item here..</string>
    <string name="activity_alert_label_grain">Grains</string>
    <string name="activity_alert_label_fruit">Fruits</string>
    <string name="activity_alert_label_vegetable">Vegetables</string>
    <string name="activity_alert_label_protein">Protein</string>
    <string name="activity_alert_label_dairy">Dairy</string>
    <string name="activity_alert_label_intake">DAILY INTAKE RANGE</string>
    <string name="activity_alert_label_minCol">MIN</string>
    <string name="activity_alert_label_maxCol">MAX</string>
    <string name="activity_alert_label_foodgroup">FOOD GROUP</string>
    <string name="activity_alert_label_calories">CALORIES</string>
    <string name="activity_alert_label_portion">PORTION</string>
    <string name="activity_alert_label_max">Max Daily Calories</string>
    <string name="activity_alert_label_title">MY ALERTS</string>
    <string name="activity_alert_label_update">UPDATE</string>
    <string name="activity_reporting_label_report_title">REPORTING</string>
    <string name="activity_reporting_label_enter_date">Date</string>
    <string name="activity_reporting_label_go">GO</string>
    <string name="activity_reporting_label_daily_max">Daily Maximum</string>
    <string name="activity_reporting_label_total_cal">Total Calories</string>
    <string name="activity_reporting_label_time">Time</string>
    <string name="activity_reporting_label_group">Group</string>
    <string name="activity_reporting_label_item">Item</string>
    <string name="activity_reporting_label_portion">Portion</string>
    <string name="activity_reporting_label_calories">Calories</string>
    <string name="activity_reporting_label_hint_date">00/00/0000</string>
    <string name="activity_reporting_label_hint_daily">1200</string>
    <string name="activity_reporting_label_hint_total">600</string>
    <string name="activity_reporting_label_hint_calendar">Click for Calendar</string>
    <string name="activity_reporting_label_hint_go">Click to Run Report</string>
    <string name="activity_reporting_label_hint_email">Send Report To Nutricianist</string>
    <string name="text_fragment">No Data for Report.</string>
    <string name="button_delete">DELETE</string>
    <string name="button_update">UPDATE</string>
    <string name="pref_daily_max">Daily Maximum Calories Exceeded Message</string>
    <string name="pref_fruit_max">Daily Fruit Max Exceeded Message</string>
    <string name="pref_fruit_min">Daily Fruit Min Message</string>
    <string name="pref_grain_max">Daily Grain Max Exceeded Message</string>
    <string name="pref_grain_min">Daily Grain Min Message</string>
    <string name="pref_protein_max">Daily Protein Max Exceeded Message</string>
    <string name="pref_protein_min">Daily Protein Min Message</string>
    <string name="pref_veg_max">Daily Vegetable Max Exceeded Message</string>
    <string name="pref_veg_min">Daily Vegetable Min Message</string>
    <string name="pref_dairy_max">Daily Dairy Max Exceeded Message</string>
    <string name="pref_dairy_min">Daily Dairy Min Message</string>
    <string name="pref_email">Nutritionist Email</string>
    <string name="pref_phone">Nutritionist Phone</string>
    <string name="pref_sms">Nutritionist SMS Message</string>
</resources>
