<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.riansousa.foodtrackerv2.MyPreferencesActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_email"
                android:id="@+id/lblEmailPref"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmailPref"
                android:layout_below="@+id/lblMaxCaloriesPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_phone"
                android:id="@+id/lblPhonePref"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPhonePref"
                android:layout_below="@+id/lblMaxCaloriesPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_sms"
                android:id="@+id/lblSmsPref"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSmsPref"
                android:layout_below="@+id/lblMaxCaloriesPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_daily_max"
                android:id="@+id/lblMaxCaloriesPref"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors"
                 />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtMaxCaloriesPref"
                android:layout_below="@+id/lblMaxCaloriesPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_fruit_max"
                android:id="@+id/lblFruitMaxPref"
                android:layout_below="@+id/lblMaxCaloriesPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors"
                 />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFruitMaxPref"
                android:layout_below="@+id/lblFruitMaxPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_fruit_min"
                android:id="@+id/lblFruitMinPref"
                android:layout_below="@+id/txtFruitMaxPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFruitMinPref"
                android:layout_below="@+id/lblFruitMinPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_grain_max"
                android:id="@+id/lblGrainMaxPref"
                android:layout_below="@+id/txtFruitMinPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtGrainMaxPref"
                android:layout_below="@+id/lblGrainMaxPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_grain_min"
                android:id="@+id/lblGrainMinPref"
                android:layout_below="@+id/txtGrainMaxPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtGrainMinPref"
                android:layout_below="@+id/lblGrainMinPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_protein_max"
                android:id="@+id/lblProteinMaxPref"
                android:layout_below="@+id/txtGrainMinPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtProteinMaxPref"
                android:layout_below="@+id/lblProteinMaxPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_protein_min"
                android:id="@+id/lblProteinMinPref"
                android:layout_below="@+id/txtProteinMaxPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtProteinMinPref"
                android:layout_below="@+id/lblProteinMinPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_veg_max"
                android:id="@+id/lblVegetableMaxPref"
                android:layout_below="@+id/txtProteinMinPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtVegetableMaxPref"
                android:layout_below="@+id/lblVegetableMaxPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_veg_min"
                android:id="@+id/lblVegetableMinPref"
                android:layout_below="@+id/txtVegetableMaxPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtVegetableMinPref"
                android:layout_below="@+id/lblVegetableMinPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_dairy_max"
                android:id="@+id/lblDairyeMaxPref"
                android:layout_below="@+id/txtVegetableMinPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDairyMaxPref"
                android:layout_below="@+id/lblDairyMaxPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_dairy_min"
                android:id="@+id/lblDairyMinPref"
                android:layout_below="@+id/txtDairyMaxPref"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView"
                style="@style/Preference_Title_Colors" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDairyMinPref"
                android:layout_below="@+id/lblDairyMinPref"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView"
                android:layout_alignEnd="@+id/scrollView" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UPDATE"
                android:id="@+id/btnUpdatePreferences"
                android:textColor="#ffffff"
                android:background="#39966c"
                android:singleLine="true"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
